--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit==1.38.0
-scikit-learn==1.4.2
-matplotlib==3.8.4
-plotly==5.22.0
-joblib==1.4.2
-xgboost==2.0.3
-pyarrow==16.1.0
+streamlit==1.28.2
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+plotly==5.15.0
+scipy==1.11.1
+joblib==1.3.2
+xgboost==1.7.6
+openpyxl==3.1.2
