--- a/.streamlit/ config.toml
+++ b/.streamlit/ config.toml
@@ -4,6 +4,13 @@ enableCORS = false
 enableXsrfProtection = true
 maxUploadSize = 200
 
+address = "0.0.0.0"
+port = 8501
+
 [theme]
 base="light"
 primaryColor="#1f77b4"
+
+[browser]
+serverAddress = "localhost"
+gatherUsageStats = false
